[package]
name = "find-track-by-color"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.66", features = ["backtrace"] }
clap = { version = "4.0.29", features = ["derive"] }
futures = "0.3.25"
futures-util = "0.3.25"
image = "0.24.5"
reqwest = { version = "0.11.13", features = ["json"] }
rspotify = { version = "0.11.5", features = ["env-file", "cli"] }
serde = { version = "1.0.149", features = ["derive"] }
tokio = { version = "1.22.0", features = ["full"] }
css-color = "0.2.4"
indicatif = "0.17.2"
derive-new = "0.5.9"
kmeans_colors = { version = "0.5", default-features = false, features = ["palette_color"] }
palette = "0.6.1"
derive_builder = "0.12.0"
